samples/_failures_safe/1761690901_36e02e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28a68e76.c: In function ‘main’:
./samples/SAFE/__tmp_28a68e76.c:143:10: error: ‘sever’ undeclared (first use in this function)
  143 |     free(sever
      |          ^~~~~
./samples/SAFE/__tmp_28a68e76.c:143:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_28a68e76.c:143:15: error: expected ‘)’ at end of input
  143 |     free(sever
      |         ~     ^
      |               )
./samples/SAFE/__tmp_28a68e76.c:143:5: error: expected declaration or statement at end of input
  143 |     free(sever
      |     ^~~~
